Changelog
=========

1.2.2 (unreleased)
------------------

- Fixed translation [andrea]
- Fixed query catalog for areas in room in the event. Now results are filtered by room path [andrea]
- Added multi-language support in creation event [andrea]
- Added for_types exception for PloneBoard area. Now rules are filtered for PloneboardComment [andrea]

1.2.1 (2013-09-24)
------------------

- Fix rule mail sendere for rooms with accents [andrea]
- Fix rule message for modified contents [andrea]

1.2.0 (2013-08-02)
------------------

- Use plone.stringinterp for standard Plone interpolations
  [keul]

1.1.0 (2013-07-26)
------------------

- If default_email_sender registry property is set, the sender of rules 
  will be set with that address
  [andrea]

1.0.0 (2013-06-24)
------------------

- Initial release