@@ -22,17 +22,18 @@ class NotificationSubscriptionView(BrowserView):
             group = portal_groups.getGroupById(group_id)
             group_members = group.getMemberIds()
             userid = member.id
+            fullname = member.getProperty('fullname', userid)
             plone_utils = getToolByName(self.context, 'plone_utils')
             if userid not in group_members:
                 portal_groups.addPrincipalToGroup(userid, group_id)
                 plone_utils.addPortalMessage(_('added_to_notify_group',
                                                default=u"User ${user} added to notification group",
-                                               mapping={'user': userid, 'group': group_id}))
+                                               mapping={'user': fullname, 'group': group_id}))
             else:
                 portal_groups.removePrincipalFromGroup(userid, group_id)
                 plone_utils.addPortalMessage(_('removed_from_notify_group',
                                                default=u"User ${user} removed from notification group",
-                                               mapping={'user': userid, 'group': group_id}))
+                                               mapping={'user': fullname, 'group': group_id}))
         request.response.redirect(self.context.absolute_url())
     
     def _checkSecurity(self, member, room_id, raiseOnUnauth=True):
