@@ -8,6 +8,7 @@ Changelog
 - Fixed query catalog for areas in room in the event. Now results are filtered by room path [andrea]
 - Added multi-language support in creation event [andrea]
 - Added for_types exception for PloneBoard area. Now rules are filtered for PloneboardComment [andrea]
+- Add fullname in portal_message after subscription/unsubscription action [andrea]
 
 1.2.1 (2013-09-24)
 ------------------
